--- a/counter-service/src/main/resources/application.properties
+++ b/counter-service/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 server.port=9090
 spring.application.name=counter-service
-eureka.client.service-url.default-zone: http://localhost:8761/eureka
+eureka.client.service-url.default-zone=http://localhost:8761/eureka
